# multi-threaded-worker

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  multi-threaded-worker.sln
applications/hotel-reservation/: calculate_metrics.py  client-nats.py
applications/hotel-reservation/function/: compile-all.sh  create-order.json  create-order.py  get-rates.json  get-rates.py  get-recommendations.json  get-recommendations.py  get-user.json  get-user.py  nearby.json  nearby.py  reserve-flight.json  reserve-flight.py  reserve-hotel.json  reserve-hotel.py  write-string.json  write-string.py
applications/hotel-reservation/wit/: func-handler.wit  world.wit
applications/hotel-reservation/wit_world/exports/: __init__.py  func_handler.py
applications/microbenchmarks/abort-bench/: client-nats.py
applications/microbenchmarks/abort-bench/function/: compile-all.sh  create-order.json  create-order.py  reserve-flight.json  reserve-flight.py  reserve-hotel.json  reserve-hotel.py  write-string.json  write-string.py
applications/microbenchmarks/abort-bench/wit/: kv.wit
applications/microbenchmarks/abort-bench/wit_world/imports/: outgoing_handler.py  types.py
applications/microbenchmarks/choice-bench/: client-nats.py
applications/microbenchmarks/choice-bench/function/: create-order.json  reserve-flight.json  reserve-hotel.json  write-string.json
applications/ycsb/: calculate_input_throughput.py  calculate_metrics.py  client-nats.py  client.py
applications/ycsb/Results/: client_requests.csv  ycsbt_uni_1000.json
applications/ycsb/function/: transfer.json  transfer.py  write.json  write.py
applications/ycsb/wit/: func-handler.wit  world.wit
applications/ycsb/wit_world/imports/: kv.py  streams.py
detersl_client/: __init__.py
docker/: entrypoint.sh  nats-server.conf
functions/: access_cowns.cpp  access_cowns.json  check.cpp  choice_invoke.json  choice_workflow.json  matmul.cpp  matmul.json  newmul.cpp  print_input.cpp  print_input.json  shared_objects.h
native-execution/: cpp-func.hpp  cpp-http-server.hpp  cpp-runner.hpp  cpp-scheduling.hpp  detersl.h
scripts/: create_config.py  run_abort_experiments.sh  run_batch_experiments.sh  run_choice_experiments.sh  run_experiment.sh  run_scalabilty_experiments.sh  start_detersl_cluster.sh  stop_detersl_cluster.sh
src/: basic-net.hpp  bytes.hpp  cpp-func.hpp  cpp-runner.hpp  detersl.h  fast-json.hpp  func.hpp  graph.cpp  graph.hpp  http-server.hpp  kv.hpp  main.cc  main.cpp  metrics.cpp  metrics.hpp  models.hpp  nats-worker.cpp  nats-worker.hpp  nats_raii.cpp  nats_raii.hpp  registrar.cpp  registrar.hpp  registry.cpp  registry.hpp  resource.hpp  runner.cpp  runner.hpp  scheduling.cpp  scheduling.hpp  status.cpp  status.hpp  thread-safe-queue.hpp  types.hpp  utils.cpp  utils.hpp  wasm-executioner.hpp  wasm-func.hpp  wasm-kv.hpp  wasm-runner.hpp
src/execution/: function.hpp  runner.cpp  runner.hpp
src/execution/wasm/: wasm_executioner.hpp  wasm_function.hpp  wasm_kv.hpp  wasm_runner.hpp
src/nats/: connection.cpp  connection.hpp  worker.cpp  worker.hpp
src/storage/: bytes.hpp  kv.hpp  resource.hpp
src/support/: mpsc_queue.hpp
src/workflow/: graph.cpp  graph.hpp  registrar.cpp  registrar.hpp  registry.cpp  registry.hpp  resource_bindings.cpp  resource_bindings.hpp  scheduler.cpp  scheduler.hpp  status.cpp  status.hpp
src/workflow/model/: invocation.hpp  workflow.hpp
